# quant_exchange

./: .gitignore  Dockerfile  Dockerfile.prod  docker-compose.yml  pyproject.toml
doc/: README.md  TODO_unfinished_features.md  quant_trading_bilingual_glossary.md  quant_trading_competitive_analysis_and_enhanced_requirements.md  quant_trading_database_schema_design.md  quant_trading_detailed_function_spec.md  quant_trading_enhanced_api_interface_definition.md  quant_trading_enhanced_database_schema_design.md  quant_trading_factor_library_and_implementation_guide.md  quant_trading_futures_and_crypto_support_design.md  quant_trading_implementation_coverage_audit.md  quant_trading_market_intelligence_sentiment_tool_design.md  quant_trading_mvp_development_plan.md  quant_trading_polyglot_technology_stack_design.md  quant_trading_portfolio_risk_and_trading_methods_framework.md  quant_trading_pre_implementation_readiness_plan.md  quant_trading_requirements_analysis.md  quant_trading_stock_market_support_design.md  quant_trading_stock_screener_web_workbench_design.md  quant_trading_system_architecture_design.md  quant_trading_test_plan_and_acceptance_cases.md
tests/: fixtures.py  test_a_share_baostock_downloader.py  test_a_share_history_downloader.py  test_adapters_and_rules.py  test_adapters_exchange.py  test_api_config_scheduler.py  test_api_fastapi_service.py  test_background_downloader.py  test_backtest.py  test_backtest_enhanced.py  test_backtest_multi_asset.py  test_bot_center.py  test_crypto_service.py  test_enhanced_layers.py  test_enhanced_new_modules.py  test_forex.py  (+34 more)
(+128 files in other folders)
